[tool.poetry]
name = "jallm"
version = "0.1.0"
description = ""
authors = ["Masahiro Suzuki <msuzuki9609@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = { git = "https://github.com/huggingface/transformers", rev = "7df1343292a9d75f1410cb37a99f423dcde15dae" }
datasets = "^2.11.0"
deepspeed = "^0.8.3"
torch = "1.13.1"
sentencepiece = "^0.1.98"
peft = "0.3.0"
psutil = "^5.9.3"
accelerate = "^0.18.0"
bitsandbytes = "^0.38.1"
triton = "^2.0.0.post1"
wandb = "^0.14.2"
fschat = "0.2.8"
mpi4py = "^3.1.4"
einops = "^0.6.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
